# ct-itmo

./: .gitattributes
algorithms/sem4/: 1a.kt  1b.kt  2a.kt  2b.kt  3b.kt  5a.cpp
c++/nbody-problem/: planets.txt
c++/sem2/nbody-problem/: CMakeLists.txt  README.md  planets2.txt
c++/sem2/nbody-problem/src/: main.cpp  nbody.cpp
discrete-math/generating-functions/: c.kt  d.kt  e.kt  i.kt
discrete-math/turing-machine/: aplusb.out  balanced.out  less.out  mirror.out  reverse.out
java-adv/arrayset/: ArraySet.java
java-adv/concurrent/: IterativeParallelism.java  ParallelMapperImpl.java
java-adv/crawler/: EmptyDocument.java  WebCrawler.java
java-adv/hello/: HelloUDPClient.java  HelloUDPNonblockingClient.java  HelloUDPNonblockingServer.java  HelloUDPServer.java  HelloUDPUtility.java
java-adv/i18n/: StatBundle_en_US.java  StatBundle_ru_RU.java  TextAnalyzer.java  TextStatistics.java  TextStats.java  TriFunction.java  i18nTest.java  input.txt
java-adv/implementor/: ImplUtils.java  Implementor.java
java-adv/student/: StudentDB.java
java-adv/walk/: RecursiveWalk.java  Walk.java
optimization-methods/lab1/: final.ipynb
optimization-methods/lab2/: gd_algs.py
shad-rust/: Cargo.toml
shad-rust/chip8/: log_output2  log_output3
shad-rust/pargrep/: README.md
translation-methods/lambda-paser/: README.md  build.gradle.kts  run-tests.sh  run.sh  settings.gradle.kts
translation-methods/parser-generator/: README.md  build.gradle.kts  settings.gradle.kts
translation-methods/python-transpiler/: README.md  build.gradle.kts  settings.gradle.kts
(+532 files in other folders)
